[build-system]
requires = [
    "setuptools",
    "setuptools-git-versioning"
]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true
dev_template = "{tag}"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "helpy"
dynamic = ["version"]
maintainers = [
    {name = "Viktor Svahn", email="svahnv@gmail.com"}
]
requires-python = ">=3.8"
description = "A set of helper functions for various situations."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
dependencies = [
    "matplotlib"
]

[project.urls]
repository = "https://github.com/viktorsvahn/helpy.git"
