[build-system]
requires = [
    "setuptools",
    "setuptools-git-versioning"
]
build-backend = "setuptools.build_meta"

[project]
name = "helpy"
dynamic = ["version"]
authors = [{name = "Viktor Svahn", email="svahnv@gmail.com"}]
maintainers = [{name = "Viktor Svahn", email="svahnv@gmail.com"}]
dependencies = [
    "matplotlib"
]

[tool.setuptools-git-versioning]
enabled = true
dev_template = "{tag}"

#[tool.setuptools.packages]
#find = {}

#[tool.setuptools.package-dir]
#plot = "src/plot"

[project.urls]
repository = "https://github.com/viktorsvahn/helpy"

