[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools-git-versioning"
]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true
dev_template = "{tag}"

[project]
name = "helpy"
version = "0.0.1"
authors = [
  { name="Viktor Svahn", email="svahnv@gmail.com" },
]
description = "A set of helper functions for various situations."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
repository = "https://github.com/viktorsvahn/helpy"